hphp/test/zend/bad/ext/spl/tests/iterator_059.php
<?php
class myCachingIterator extends CachingIterator {
	
}
try {
	$it = new myCachingIterator();	
} catch (InvalidArgumentException $e) {
	echo 'InvalidArgumentException thrown';
}
?>